Fix section-heading overflow issue

--- a/app/styles/type.less
+++ b/app/styles/type.less
@@ -3,7 +3,6 @@
   font-size: 30px;
   margin: 0.75em 1em 0.25em;
   height: 1.15em;
-  width: 100%;
 }
 
 .section-heading-wrap {
